# magick4j

./: .gitignore  README  README.MD  pom.xml
jni/: CMakeLists.txt  build.sh  common.c  gif_support.c  magick_baseMagick.c  magick_color.c  magick_drawInfo.c  magick_gifSupport.c  magick_image.c  magick_imageInfo.c  magick_imageTransform.c  magick_pdfSupport.c  magick_primitiveSupport.c  pdf_support.c
jni/headers/: com_jkqj_magick_BaseMagick.h  com_jkqj_magick_draw_Color.h  com_jkqj_magick_draw_DrawInfo.h  com_jkqj_magick_draw_PrimitiveSupport.h  com_jkqj_magick_image_Image.h  com_jkqj_magick_image_ImageInfo.h  com_jkqj_magick_image_ImageTransform.h  com_jkqj_magick_support_GifSupport.h  com_jkqj_magick_support_PdfSupport.h  common.h  gif_support.h  pdf_support.h
src/main/java/com/jkqj/magick/: BaseMagick.java  MagickEntity.java
src/main/java/com/jkqj/magick/draw/: AlignType.java  Color.java  DrawInfo.java  GravityType.java  PrimitiveSupport.java
src/main/java/com/jkqj/magick/image/: ChannelType.java  CompositeOperator.java  CompressType.java  Image.java  ImageInfo.java  ImageTransform.java  MetricInfo.java  OrientationType.java  PixelInterpolateMethod.java  PixelMask.java
src/main/java/com/jkqj/magick/log/: MagickLog.java
src/main/java/com/jkqj/magick/support/: GifSupport.java  PdfSupport.java
src/test/java/com/jkqj/magick/image/: ImageTestCase.java
src/test/resources/: logback.xml
